--- a/work/env.yml
+++ b/work/env.yml
@@ -1,13 +1,17 @@
-name: validate_partner_manifest_dev
+name: bioscan_metadata_dev
 channels:
   - bioconda
   - conda-forge
   - defaults 
 dependencies:
-  - python=3.7.6
+  - python =3.7.6
   - geopy =2.1.0
   - jupyter =1.0.0
-  - pandas=1.1.0
+  - pandas =1.1.0
   - openpyxl =3.0.4
-  - xlrd=1.2.0
-  - xlwt=1.3.0
+  - xlrd =1.2.0
+  - xlwt =1.3.0
+  - ete3 =3.1.2
+  - pip
+  - pip:
+    - what3words =3.1.1
